<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="@dimen/padding_xl">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_size_wid"
        android:layout_height="@dimen/logo_size_ht"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:src="@drawable/sismoya_logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_display"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/reset_password_desc"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:fontFamily="@font/r_regular"
        android:gravity="center" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@id/tv_description"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/padding_medium"
        android:textColor="@color/text_dark"
        android:textColorHint="@color/hint_color"
        android:fontFamily="@font/r_regular" />

    <EditText
        android:id="@+id/et_confirm_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_below="@id/et_new_password"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@drawable/edittext_background"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/padding_medium"
        android:textColor="@color/text_dark"
        android:textColorHint="@color/hint_color"
        android:fontFamily="@font/r_regular" />

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/PrimaryButton"
        android:layout_below="@id/et_confirm_new_password"
        android:layout_marginTop="@dimen/margin_xl"
        android:text="@string/reset_password" />

</RelativeLayout>